--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         }
     ],
     "autoload": {
+        "files": [
+            "src/functions.php"
+        ],
         "psr-4": {
             "Cs278\\Mktemp\\": "src/"
         }
