--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "php": "^5.3.3 | ^7.0.0"
     },
     "require-dev": {
-        "cs278/coding-standard": "^1.0.0"
+        "cs278/coding-standard": "^1.0.0",
+        "phpunit/phpunit": "^4.8.21"
     },
     "scripts": {
         "cs": "php-cs-fixer fix"
