Add TempFile class that provides an easy way to handle temp files

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,6 +15,7 @@
         <testsuite name="Test Suite">
             <file>./tests/functional/TemporaryDirFunctionTest.php</file>
             <file>./tests/functional/TemporaryFileFunctionTest.php</file>
+            <file>./tests/functional/TempFileTest.php</file>
         </testsuite>
     </testsuites>
     <filter>
