--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php": "^5.3.3 || ^7 || ^8"
     },
     "require-dev": {
-        "cs278/coding-standard": "^2",
+        "bamarni/composer-bin-plugin": "^1.3.0",
         "symfony/phpunit-bridge": "^5.2"
     },
     "scripts": {
