--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
         php:
           - '5.6'
           - '7.2'
@@ -21,7 +21,7 @@ jobs:
           - '7.4'
           - '8.0'
       fail-fast: true
-    name: PHP ${{ matrix.php }}
+    name: PHP ${{ matrix.php }} (${{ matrix.os }})
     steps:
       - uses: actions/checkout@v2
       - uses: shivammathur/setup-php@ed61605069a923e7d52acea0aef21650b029c727
