--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.3.0",
-        "symfony/phpunit-bridge": "^5.2"
+        "symfony/phpunit-bridge": "5.2.*"
     },
     "scripts": {
         "cs": "php-cs-fixer fix"
