--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
       - name: Enable assertions
         run: echo 'zend.assertions=1' | sudo tee /etc/php/${{ matrix.php }}/cli/conf.d/assert.ini >/dev/null
+        if: "runner.os != 'Windows'"
       - name: Install dependencies
         run: |
           composer update
