--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,10 @@
     },
     "scripts": {
         "cs": "php-cs-fixer fix"
+    },
+    "config": {
+        "allow-plugins": {
+            "bamarni/composer-bin-plugin": true
+        }
     }
 }
