--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,17 @@
             "Cs278\\Mktemp\\": "src/"
         }
     },
+    "autoload-dev": {
+        "files": [
+            "tests/functional/TestCase/PHPUnitSetUpTearDownTrait.php"
+        ]
+    },
     "require": {
         "php": "^5.3.3 || ^7 || ^8"
     },
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.3.0",
-        "symfony/phpunit-bridge": "5.2.*"
+        "symfony/phpunit-bridge": "5.2.* || ^6.3"
     },
     "scripts": {
         "cs": "php-cs-fixer fix"
